--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/6304673J8/SpacENTI#readme",
   "dependencies": {
     "node-static": "^0.7.11"
-  }
+  },
+  "devDependencies": {}
 }
